[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_beta_Youtube"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "2.0.2"
Flask-SocketIO = "5.1.1"
python = "^3.8"
youtube-search-python = "1.4.9"
youtube_dl = "2021.6.6"
pytube = "^12.0.0"
replit = "^3.2.4"
[tool.poetry.dev-dependencies]
